--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
    <div class="row text-center gy-4">
      <div class="col-md-4">
        <div class="card">
-         <img src="https://cdn.footballkitarchive.com/2025/07/03/0EGIK3hPjvFl7Da.jpg"
+         <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhwRtXAyIYGCcs1i8UN-5jiqDaOEDCVuePwDxuK2o44KSWUbuM5ESHUjiv4Bkhl0TcsDvugWgMst61GyXVsqVNp_tSoIPT3uC_lgDlWOo2gAaQiC8NsAn7YsItd9Hoa-Oze08TJgMhQrHN-zv27eM8wL0QMBo9RLFl3G3zy7P0RNKSOEb75K2tduzkZ5674/s1600/barca-25-26-home-kit%20%283%29.jpg"
               class="card-img-top" alt="Koszulka domowa - zastępcze">
          <div class="card-body">
            <h5 class="card-title">Koszulka - wzór domowy</h5>
@@ -153,7 +153,7 @@
 
      <div class="col-md-4">
        <div class="card">
-         <img src="https://cdn.footballkitarchive.com/2025/07/29/BfdZRElUWyTlOjh.jpg"
+         <img src="https://soccerwearhouse.com/cdn/shop/files/Youth_Kids_Boys_Girls_Barcelona_Jersey_Men_s_Replica_Nike_Lamine_Yamal_Barcelona_Away_UCL_Jersey_25-26_Replica_Back_Number_8_600x.jpg?v=1754944868"
               class="card-img-top" alt="Koszulka wyjazdowa - zastępcze">
          <div class="card-body">
            <h5 class="card-title">Koszulka - wzór wyjazdowy</h5>
@@ -165,7 +165,7 @@
 
      <div class="col-md-4">
        <div class="card">
-         <img src="https://cdn.footballkitarchive.com/2025/08/19/RIWxgP2smZ9hDaj.jpg"
+         <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhWbwmX0dve5IIoq1vJVqDUDpGX2MwRrRqbvhVG2Vla0YEuWoPL-ulnaJPSN7rQVPe74roVguRNGr40QAhyphenhyphenV2-Cpsg9RqZaDAO-uiBjZsnp09ydK0Tbv35gOsnf5leLTJbFrOhbjycedFS3XqRO6EbPJXClmnXPfmw0r1eCGGEkI1F7n4UzBAg6tykklPha/s1600/barca-25-26-third-kit%20%287%29.jpg"
               class="card-img-top" alt="Koszulka trzecia - zastępcze">
          <div class="card-body">
            <h5 class="card-title">Koszulka - wzór trzeci</h5>
@@ -224,5 +224,6 @@
      if (overlay) overlay.style.display = 'none';
    });
  </script>
+ <p>test</p>
 </body>
 </html>
