--- a/index.html
+++ b/index.html
@@ -44,8 +44,44 @@
    <div class="row align-items-center">
      <div class="col-md-6">
        <h2>O FC Barcelona</h2>
-       <p>FC Barcelona, znana również jako Barça, to hiszpański klub piłkarski założony w 1899 roku. Klub zdobył wiele tytułów krajowych i międzynarodowych.</p>
-       <p>Słynie z unikalnego stylu gry — „tiki-taka”. Siedziba: Barcelona. Stadion: Camp Nou.</p>
+       <div class="accordion" id="barcaAccordion">
+         <div class="accordion-item">
+           <h2 class="accordion-header" id="headingOne">
+             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+               Historia klubu
+             </button>
+           </h2>
+           <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#barcaAccordion">
+             <div class="accordion-body">
+               FC Barcelona, znana również jako Barça, to hiszpański klub piłkarski założony w 1899 roku. Klub zdobył wiele tytułów krajowych i międzynarodowych.
+             </div>
+           </div>
+         </div>
+         <div class="accordion-item">
+           <h2 class="accordion-header" id="headingTwo">
+             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+               Styl gry
+             </button>
+           </h2>
+           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#barcaAccordion">
+             <div class="accordion-body">
+               Słynie z unikalnego stylu gry — „tiki-taka”.
+             </div>
+           </div>
+         </div>
+         <div class="accordion-item">
+           <h2 class="accordion-header" id="headingThree">
+             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+               Siedziba i stadion
+             </button>
+           </h2>
+           <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#barcaAccordion">
+             <div class="accordion-body">
+               Siedziba: Barcelona. Stadion: Camp Nou.
+             </div>
+           </div>
+         </div>
+       </div>
      </div>
      <div class="col-md-6">
        <img src="https://images.pexels.com/photos/27348423/pexels-photo-27348423.jpeg?auto=compress&cs=tinysrgb&h=600&w=900"
@@ -177,6 +213,22 @@
    </div>
  </section>
  <section id="wyniki" class="bg-light py-5">
+<div class="container mt-4">
+  <div class="alert alert-info alert-dismissible fade show" role="alert">
+    <strong>Najbliższy mecz:</strong> FC Barcelona vs. Sevilla FC – 28 września 2025, godz. 21:00
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Zamknij"></button>
+  </div>
+</div>
+
+<!-- Pasek postępu sezonu La Liga -->
+<div class="container mb-4">
+  <label for="seasonProgress" class="form-label">Postęp sezonu La Liga:</label>
+  <div class="progress" style="height: 30px;">
+    <div class="progress-bar progress-bar-striped bg-warning text-dark" role="progressbar" style="width: 18%; font-size: 1.1rem;" aria-valuenow="7" aria-valuemin="0" aria-valuemax="38" id="seasonProgress">
+      7 / 38 meczów
+    </div>
+  </div>
+</div>
    <div class="container text-center">
      <h2>Ostatnie wyniki</h2>
      <p>Aktualne wyniki meczów FC Barcelony:</p>
@@ -218,11 +270,12 @@
  </section>
 
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
- <script>
+<script>
    window.addEventListener('load', function() {
      const overlay = document.getElementById('loadingOverlay');
      if (overlay) overlay.style.display = 'none';
    });
+</script>
  </script>
  <p>test</p>
 </body>
