--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Zamknij"></button>
            </div>
            <div class="modal-body">
-             <img src="https://images.pexels.com/photos/31160062/pexels-photo-31160062.jpeg?auto=compress&cs=tinysrgb&h=900&w=1400"
+             <img src="https://static01.nyt.com/athletic/uploads/wp/2024/09/27053444/barcelona-fans-scaled.jpg?width=1200&height=630&fit=cover"
                   class="img-fluid" alt="Kibice - powiększenie">
            </div>
          </div>
@@ -220,7 +220,6 @@
   </div>
 </div>
 
-<!-- Pasek postępu sezonu La Liga -->
 <div class="container mb-4">
   <label for="seasonProgress" class="form-label">Postęp sezonu La Liga:</label>
   <div class="progress" style="height: 30px;">
@@ -230,7 +229,7 @@
   </div>
 </div>
    <div class="container text-center">
-     <h2>Ostatnie wyniki</h2>
+     <h2> <span class="badge bg-secondary">Ostatnie wyniki</span></h2>
      <p>Aktualne wyniki meczów FC Barcelony:</p>
      <div class="row">
        <div class="col-md-4">
@@ -259,6 +258,12 @@
        </div>
      </div>
    </div>
+   <div class="toast show">
+    <div class="toast-header">
+      <strong class="me-auto">Dane aktualne na dzien 22.09.2025</strong>
+      <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
+    </div>
+  </div>
  </section>
  <section id="kontakt" class="footer">
    <div class="container">
