--- a/index.html
+++ b/index.html
@@ -231,6 +231,12 @@
    <div class="container text-center">
      <h2> <span class="badge bg-secondary">Ostatnie wyniki</span></h2>
      <p>Aktualne wyniki meczów FC Barcelony:</p>
+     <div class="toast show">
+      <div class="toast-header d-flex justify-content-center align-items-center" >
+        <strong class="me-auto">Dane aktualne na dzien 22.09.2025</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
+      </div>
+    </div><br>
      <div class="row">
        <div class="col-md-4">
          <div class="card mb-3">
@@ -258,12 +264,6 @@
        </div>
      </div>
    </div>
-   <div class="toast show">
-    <div class="toast-header">
-      <strong class="me-auto">Dane aktualne na dzien 22.09.2025</strong>
-      <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
-    </div>
-  </div>
  </section>
  <section id="kontakt" class="footer">
    <div class="container">
